src/objects/Lead_RecTypes_Fields__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Contact_Center_RecordType__c</fullName>
        <defaultValue>&apos;Contact Center&apos;</defaultValue>
        <label>Contact Center RecordType</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Existing_Account__c</fullName>
        <defaultValue>&apos;00N20000009cSiW&apos;</defaultValue>
        <label>Related Existing Account</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Existing_Contact__c</fullName>
        <defaultValue>&apos;00N20000009cSiX&apos;</defaultValue>
        <label>Related Existing Contact</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Marketing_RecordType__c</fullName>
        <defaultValue>&apos;Sales &amp; Marketing&apos;</defaultValue>
        <label>Sales &amp; Marketing RecordType</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lead RecTypes and Fields</label>
</CustomObject>